--- a/pom.xml
+++ b/pom.xml
@@ -78,11 +78,11 @@
 			<artifactId>yauaa</artifactId>
 			<version>7.19.1</version>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-mail</artifactId>
-			<version>3.2.0</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-mail</artifactId>-->
+<!--			<version>3.2.0</version>-->
+<!--		</dependency>-->
 	</dependencies>
 
 	<profiles>
