--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -10,7 +10,7 @@ spring:
     generate-ddl: true
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         globally_quoted_indentifiers: true
@@ -18,5 +18,5 @@ spring:
         format_sql: true
   sql:
     init:
-      mode: never
+      mode: always
       continue-on-error: false
