--- a/.env.test
+++ b/.env.test
@@ -6,7 +6,7 @@ MYSQL_USERNAME=root
 MYSQL_PASSWORD=sniegavirs
 MYSQL_HOST=localhost
 MYSQL_PORT=3306
-MYSQL_DATABASE=invoiceapp
+MYSQL_DATABASE=choiceai
 
 #Server config
 CONTAINER_PORT=8085
